# OVH-Weather-Dataset

./: .gitignore  LICENSE  README.md  requirements.txt  timeline.py  weathermap_parse.py
csv/: AMS-IX_ams-1-n7.csv  AMS-IX_ams-5-n7.csv  data_time_distances.yaml  data_time_intervals.yaml  ecmp-agg-total-all.csv  ecmp-agg-total-external.csv  ecmp-agg-total-ovh.csv  ecmp-agg-values-all.csv  ecmp-agg-values-external.csv  ecmp-agg-values-ovh.csv  high_loads.csv  high_loads_filtered.csv  nb-links-all.csv  nb-links-external.csv  nb-links-ovh.csv  nb-nodes-all.csv  nb-nodes-external.csv  nb-nodes-ovh.csv  static_node_degree.csv  static_node_degree_internal.csv  static_node_degree_peers.csv
csvCR/: ecmp-agg-total-all.csv  ecmp-agg-total-external.csv  ecmp-agg-total-ovh.csv  ecmp-agg-values-all.csv  ecmp-agg-values-external.csv  ecmp-agg-values-ovh.csv  nb-links-all.csv  nb-links-external.csv  nb-links-ovh.csv  nb-nodes-all.csv  nb-nodes-external.csv  nb-nodes-ovh.csv
csv_april_2022/: ecmp-agg-total-external.csv  ecmp-agg-total-ovh.csv  ecmp-agg-values-all.csv  ecmp-agg-values-external.csv  ecmp-agg-values-ovh.csv  ecmp-diffs-external.yaml  ecmp-diffs-ovh.yaml  nb-links-all.csv  nb-links-external.csv  nb-links-ovh.csv  nb-nodes-all.csv  nb-nodes-external.csv
csv_march_2022/: README.md  ecmp-agg-total-all.csv  ecmp-agg-values-all.csv  ecmp-agg-values-external.csv  ecmp-agg-values-ovh.csv  ecmp-diffs-external.yaml  (+7 more)
ovh-parsing/: Cargo.toml  README.md
ovh-parsing/csv/: nb-links-all.csv
ovh-parsing/src/: basic_analyzis.rs  get_files.rs  lib.rs  main.rs  multithreading.rs
(+15 files in other folders)
