[package]
name = "ovh-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
chrono = "0.4.19"
serde_yaml = "0.8.24"
serde_json = "1.0"
indicatif = "0.16.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
threadpool = "1.8.1"
clap = { version = "3.2.14", features = ["derive"] }